# pds_assignment_2

./: README.md
Distance_sort/: .gitignore  CMakeLists.txt  Makefile
Distance_sort/datasets/: data_1
Distance_sort/src/: main.c
Distance_sort/src/data/: points.h  read_points.c  read_points.h
Distance_sort/src/logs/: logging.c  logging.h
mpi_distance_sort/: .gitignore  Makefile  benchmarks.sh  hostfile  test_job_submission.sh
mpi_distance_sort/src/: main.c  main.h
mpi_distance_sort/src/data/: points.c  points.h  read_points.c  read_points.h  structs.h
mpi_distance_sort/src/processes/: masterProcess.c  masterProcess.h  slaveProcess.c  slaveProcess.h  threads.c  threads.h
mpi_distance_sort/src/tools/: create_sample_points.c  mnist.jl
